--- a/turorienteringapp/frontend/src/pages/SignIn.css
+++ b/turorienteringapp/frontend/src/pages/SignIn.css
@@ -9,19 +9,23 @@
     background-size: cover;  
     background-repeat: no-repeat; 
     background-position: center;  
-    background-color: #4CAF50;
     justify-content: center; 
+    max-height: 100%; 
+    overflow: auto; 
+    
+    
 }
 
 /* Styling for the main sign-in form container. */
 .signin-container {
     width: 300px;
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     background-color: #ffffff;
     overflow: hidden;
     width: auto;
+    margin-top: 60px; /*move the sing in container little bit down*/
 }
 
 h1 {
